[package]
name = "cairo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.0", package = "gtk4", features = ["v4_2", "v4_6"] }
gio = "^0"

cairo-rs = "^0"
pango = "0.16.3"
is_close = "0.1.3"
